package ArkhitekturaPO.Practical04;

public interface ContactReader {
    void readContacts(String csvFile);
}
