package ArkhitekturaPO.Practical04;

public interface ContactWriter {
    void writeContact(String name, String surname, String phone);
}
